tests/paczka1/fuzzy1/43543433.err
Error in line 6: iwv2FPs S608 98,4
Error in line 15: qHalN2n S794 42,7
Error in line 16: qHalN2n S60 7,7
Error in line 11: 3iI A860 94,7
Error in line 20: 7xja A860 78,3
Error in line 35: ?A8:0
Error in line 38: 3iI S608 -1,1
